--- a/avaliacao_02_front_end_3/src/index.css
+++ b/avaliacao_02_front_end_3/src/index.css
@@ -258,13 +258,15 @@ body {
   .estiloCredito h4 {
     color: #5d646f;
     font-size: 18px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    
   }
   
-  .estiloCredito p {
+  .estiloCredito li {
     color: #293952;
     font-size: 16px;
     margin-bottom: 20px;
+    
   }
   
   
